Avoid duplicate multiplication with price for investments

In non forecast reports, the number of shares of investment accounts was
multiplied twice with the price due to a change made with commit
83dd7a0d.

This change reverts commit 83dd7a0d and fixes the original problem in
the right place.

BUG: 415668
FIXED-IN: 5.0.8